[gd_scene load_steps=12 format=3 uid="uid://cib1rov66awpu"]

[ext_resource type="Script" path="res://proto_combat_map_v1/Scripts/combat_map_proto.gd" id="1_5ukb4"]
[ext_resource type="PackedScene" uid="uid://ckycyu7t3mvkt" path="res://proto_combat_map_v1/Scenes/map_tile.tscn" id="1_e7muk"]
[ext_resource type="PackedScene" uid="uid://chu1ridfoelhj" path="res://proto_combat_map_v1/Assets/mapArrow.gltf" id="3_hftxp"]
[ext_resource type="PackedScene" uid="uid://mx0c7vkqcljs" path="res://proto_combat_v5/Scenes/character.tscn" id="3_nhdyy"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ubycf"]
sky_top_color = Color(0.625808, 0.918612, 1, 1)
sky_horizon_color = Color(0.51, 0.689667, 1, 1)
sky_curve = 0.0494816

[sub_resource type="Sky" id="Sky_yy1ip"]
sky_material = SubResource("ProceduralSkyMaterial_ubycf")

[sub_resource type="Environment" id="Environment_fdg8w"]
background_mode = 2
sky = SubResource("Sky_yy1ip")

[sub_resource type="BoxShape3D" id="BoxShape3D_i5bxd"]
size = Vector3(405.999, 1, 3.04644)

[sub_resource type="BoxMesh" id="BoxMesh_nuy5p"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1vbc3"]
blend_mode = 3

[sub_resource type="LabelSettings" id="LabelSettings_nr2vk"]
font_color = Color(1, 0, 1, 1)

[node name="CombatMapProto" type="Node3D"]
script = ExtResource("1_5ukb4")
mapSize = 3

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.965926, 0.183013, -0.183013, 0, 0.707107, 0.707107, 0.258819, -0.683013, 0.683013, 0, 3.84087, 0)
shadow_enabled = true

[node name="Pivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866026, 0, -0.866026, 0.5, 1, 0, 1)

[node name="Camera3D" type="Camera3D" parent="Pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 7.45058e-08, 0, -7.45058e-08, 1, 0, 0, 6)
environment = SubResource("Environment_fdg8w")
fov = 45.0

[node name="Mockup" type="Node3D" parent="."]
visible = false

[node name="MapTile" parent="Mockup" instance=ExtResource("1_e7muk")]

[node name="MapTile2" parent="Mockup" instance=ExtResource("1_e7muk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="MapTile3" parent="Mockup" instance=ExtResource("1_e7muk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 2)

[node name="MapTile4" parent="Mockup" instance=ExtResource("1_e7muk")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2)

[node name="Character" parent="Mockup" instance=ExtResource("3_nhdyy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0)

[node name="Floor" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.308746, 0, 0.0161858)
shape = SubResource("BoxShape3D_i5bxd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
transform = Transform3D(406.504, 0, 0, 0, 1, 0, 0, 0, 332.145, 0, 0, 0)
mesh = SubResource("BoxMesh_nuy5p")

[node name="MapArrow" parent="." instance=ExtResource("3_hftxp")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 2.3, 0)
visible = false

[node name="Highlight" type="Marker3D" parent="."]
visible = false

[node name="SpotLight3D" type="SpotLight3D" parent="Highlight"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.5, 0)
light_energy = 30.0
spot_range = 3.37854
spot_angle = 26.9969

[node name="Characters" type="Node3D" parent="."]

[node name="Enemies" type="Node3D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerStatsLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 186.0
offset_bottom = 409.0
text = "Name: null
Max HP: 999
Current HP: 999
Attack: 999
Defense: 999
Movement: 999"

[node name="ColorRect" type="ColorRect" parent="UI/PlayerStatsLabel"]
z_index = -1
material = SubResource("CanvasItemMaterial_1vbc3")
layout_mode = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 136.0
offset_bottom = 160.0
color = Color(0.654232, 0.654232, 0.654232, 1)

[node name="EnemyStatsLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 960.0
offset_top = 256.0
offset_right = 1082.0
offset_bottom = 409.0
text = "Name: null
Max HP: 999
Current HP: 999
Attack: 999
Defense: 999
Movement: 999"

[node name="ColorRect" type="ColorRect" parent="UI/EnemyStatsLabel"]
z_index = -1
material = SubResource("CanvasItemMaterial_1vbc3")
layout_mode = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 136.0
offset_bottom = 160.0
color = Color(0.654232, 0.654232, 0.654232, 1)

[node name="MoveButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 64.0
offset_top = 208.0
offset_right = 115.0
offset_bottom = 239.0
text = "Move"

[node name="AttackButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 136.0
offset_top = 208.0
offset_right = 194.0
offset_bottom = 239.0
text = "Attack"

[node name="DebugLabel" type="Label" parent="UI"]
layout_mode = 0
offset_left = 704.0
offset_right = 1147.0
offset_bottom = 179.0
text = "lastMapTile:
inMapTile:
selectedTile:
playerPopulatedTiles:
enemyPopulatedTiles:
selectedPlayer:
selectedEnemy:"
label_settings = SubResource("LabelSettings_nr2vk")
horizontal_alignment = 2

[connection signal="pressed" from="UI/MoveButton" to="." method="_on_move_button_pressed"]
[connection signal="pressed" from="UI/AttackButton" to="." method="_on_attack_button_pressed"]
